[metadata]
name = markdown_math_escape
version = attr: markdown_math_escape._meta.__version__
url = https://github.com/sgryjp/markdown_math_escape
author = Suguru Yamamoto
author_email = sgryjp@gmail.com
license_file = LICENSE
description = Python-Markdown extension to escape math expressions like $2\pi$
long_description = file: README.md

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
  Markdown~=3.1.1

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = E203
